# sagent

./: .env.example  .gitignore  README.md  design-qa.md  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
apps/agent-api/: README.md  package.json
apps/agent-api/src/sagent_agent_api/: __init__.py  benchmark_cli.py  code_edits.py  git_integration.py  main.py  (+7 more)
apps/agent-api/tests/: test_benchmark_cli.py  test_capability_preview.py  test_cloud_approval_preview.py  test_cloud_config_preview.py  test_code_edits.py  test_git.py  test_health.py  test_memory_approval.py  test_memory_query_delete.py  test_model_job_api.py  test_models.py  test_task.py  test_test_execution.py  test_test_runner.py  test_workflow.py
apps/web/: README.md  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: benchmark-status.tsx  capability-policy-preview.tsx  cloud-approval-preview.tsx  code-edit-preview-panel.tsx  sagent-shell.tsx
apps/web/data/: benchmark-status.json  capability-policy-preview.json  cloud-approval-preview.json  cloud-config-preview.json
apps/web/tests/: benchmark-status.test.mjs  capability-policy-preview.test.mjs  cloud-approval-preview.test.mjs  code-edit-preview.test.mjs
docs/: AGENT_WORKFLOW.md  ARCHITECTURE.md  CLOUD_APPROVAL_UX_RUNBOOK.md  CLOUD_PROVIDER_POLICY.md  DECISIONS.md  HANDOFF.md  LOCAL_MODELS.md  LOCAL_MODEL_BENCHMARKS.md  MASTER_PLAN.md  MEMORY.md  MEMORY_V2_VECTOR_STORE_EVALUATION.md  OLLAMA_LIVE_BENCHMARK_RUNBOOK.md  PROJECT.md  ROADMAP.md  SECURITY.md  TASKS.md
tests/: test_benchmark_ui_contract.py
