[project]
name = "sagent"
version = "0.0.0"
description = "Local-first, Mac-first personal AI agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests", "packages"]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["node_modules", ".turbo"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101"]
