[project]
name = "sagent"
version = "0.0.0"
description = "Local-first, Mac-first personal AI agent"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx2>=2.5.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["apps/agent-api/tests", "tests", "packages"]
pythonpath = [
  "apps/agent-api/src",
  "packages/agent-core/src",
  "packages/tools/src",
]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["node_modules", ".turbo"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]

[tool.ruff.lint.isort]
known-first-party = ["sagent_agent_api", "sagent_agent_core", "sagent_tools"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101"]
